--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>PaintJs</title>
+    <link rel="stylesheet" href="/dist/css/main.min.css">
+    <script src="/dist/js/app.js"></script>
 </head>
 <body>
     Hello git
