--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>PaintJs</title>
-    <link rel="stylesheet" href="/dist/css/main.min.css">
+    <link rel="stylesheet" href="./dist/css/main.min.css">
 </head>
 <body>
     <canvas id="jsCanvas" class="canvas"></canvas>
@@ -22,6 +22,6 @@
             <div class="controles__color" style="background-color: #9d2de7;"></div>
         </div>
     </div>
-    <script src="/dist/js/app.js"></script>
+    <script src="./dist/js/app.js"></script>
 </body>
 </html>
