--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,9 +8,17 @@
     <title>PaintJs</title>
     <link rel="stylesheet" href="./dist/css/main.min.css">
 </head>
+
 <body>
     <canvas id="jsCanvas" class="canvas"></canvas>
     <div class="controles">
+        <div class="controles__range">
+            <input type="range" id="jsRange" min="0.1" max="5.0" value="2.5" step="0.1">
+        </div>
+        <div class="controles__btns">
+            <button id="jsMode">Fill</button>
+            <button id="jsSave">Save</button>
+        </div>
         <div class="controles__colors" id="jsColors">
             <div class="controles__color" style="background-color: #111111;"></div>
             <div class="controles__color" style="background-color: #ffffff;"></div>
@@ -24,4 +33,5 @@
     </div>
     <script src="./dist/js/app.js"></script>
 </body>
+
 </html>
