--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
             <button id="jsSave">Save</button>
         </div>
         <div class="controles__colors" id="jsColors">
-            <div class="controles__color" style="background-color: #111111;"></div>
-            <div class="controles__color" style="background-color: #ffffff;"></div>
-            <div class="controles__color" style="background-color: #ff1818;"></div>
-            <div class="controles__color" style="background-color: #ff661f;"></div>
-            <div class="controles__color" style="background-color: #f1d21e;"></div>
-            <div class="controles__color" style="background-color: #63fc35;"></div>
-            <div class="controles__color" style="background-color: #34c7ec;"></div>
-            <div class="controles__color" style="background-color: #4c22e2;"></div>
-            <div class="controles__color" style="background-color: #9d2de7;"></div>
+            <div class="controles__color jsColor" style="background-color: #111111;"></div>
+            <div class="controles__color jsColor" style="background-color: #ffffff;"></div>
+            <div class="controles__color jsColor" style="background-color: #ff1818;"></div>
+            <div class="controles__color jsColor" style="background-color: #ff661f;"></div>
+            <div class="controles__color jsColor" style="background-color: #f1d21e;"></div>
+            <div class="controles__color jsColor" style="background-color: #63fc35;"></div>
+            <div class="controles__color jsColor" style="background-color: #34c7ec;"></div>
+            <div class="controles__color jsColor" style="background-color: #4c22e2;"></div>
+            <div class="controles__color jsColor" style="background-color: #9d2de7;"></div>
         </div>
     </div>
     <script src="./dist/js/app.js"></script>
